@@ -41,6 +41,7 @@ CHANGELOG Roundcube Webmail
 - Fix so unrecognized TNEF attachments are displayed on the list of attachments (#1490351)
 - Fix so database_attachments::cleanup() does not remove attachments from other sessions (#1490542)
 - Fix responses list update issue after response name change (#1490555)
+- Fix bug where message preview was unintentionally reset on check-recent action (#1490563)
 
 RELEASE 1.1.3
 -------------
